# MorphoTreeAdjust

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  README.md  maxTree  minTree  pybind11.cmake  pyproject.toml  release-please-config.json  setup.py
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: release-please.yml  unit-tests.yml  wheels.yml
cmake/: AppleSdkFix.cmake
dev-tools/: CMakeLists.txt
dev-tools/benchmarks/: CMakeLists.txt  benchmark_component_tree_casf.cpp  google_benchmark_main.cpp  jmiv2026_benchmark.cpp
dev-tools/cmake/: run_benchmark_component_tree_casf_smoke.cmake
dev-tools/python/: patch_adjacent_metrics_json.py  patch_flatzones_json.py  recompute_adjacent_metrics_json.py
dev-tools/tools/: CMakeLists.txt  compare_subtree_vs_instrumented.cpp  dual_min_max_tree_incremental_filter_demo.cpp  dynamic_casf_apply.cpp  dynamic_casf_apply_common.hpp  dynamic_component_tree_adjustment_demo.cpp
docs/: .gitignore  README.md  public_core_api.md  tree_code_overview.md
examples/: core_cpp_api_example.cpp  core_python_api_example.py
morphoTreeAdjust/: CMakeLists.txt  morphoTreeAdjust.cpp  morphoTreeAdjust.ipynb  morphoTreeAdjust_example.ipynb  morphoTreeAdjust_example_leaf.ipynb  morphoTreeAdjust_example_subtree.ipynb  test.py
morphoTreeAdjust/include/: AdjacencyRelation.hpp  AttributeComputer.hpp  BuilderComponentTreeByUnionFind.hpp  CASF.hpp  Common.hpp  ComponentTree.hpp  ComponentTree.tpp  ComponentTreeAdjustment.hpp  ComponentTreeAdjustmentByAnyNode.hpp  ComponentTreeAdjustmentByFlatzone.hpp  ComponentTreeAdjustmentByLeaf.hpp  ComponentTreeAdjustmentBySubtree.hpp  ComponentTreeCasf.hpp  ComponentTreeGeneralAdjustment.hpp  DualMinMaxTreeIncrementalFilter.hpp  DualMinMaxTreeIncrementalFilterInstrumented.hpp  DualMinMaxTreeIncrementalFilterLeaf.hpp  DynamicComponentTree.hpp  DynamicComponentTreeAdjustment.hpp  DynamicComponentTreeAdjustmentInstrumented.hpp  DynamicComponentTreeAdjustmentLeaf.hpp  FlatZoneAdjacencyOnDemand.hpp  FlatZoneGraph.hpp  FlatZonesGraph.hpp  FlatZonesGraphEager.hpp  GraphOfFlatZones.hpp  MorphoTreeAdjust.hpp  NodeCT.hpp  NodeCT.tpp  NodeCT.tpp_OLD
morphoTreeAdjust/pybind/: PyBindComponentTree.cpp  PyBindComponentTree.hpp  PyBindComponentTree.tpp  PyBindComponentTreeAdjustment.cpp  PyBindComponentTreeAdjustment.hpp  PyBindComponentTreeAdjustmentByAnyNode.cpp  PyBindComponentTreeAdjustmentByAnyNode.hpp  PyBindComponentTreeAdjustmentByFlatzone.cpp  PyBindComponentTreeAdjustmentByFlatzone.hpp  PyBindComponentTreeAdjustmentByLeaf.cpp  PyBindComponentTreeAdjustmentByLeaf.hpp  PyBindComponentTreeAdjustmentBySubtree.cpp  PyBindComponentTreeAdjustmentBySubtree.hpp  PyBindFlatZonesGraph.cpp  PyBindFlatZonesGraph.hpp  PybindUtils.hpp
morphoTreeAdjust/src/: AdjacencyRelation.cpp  CASF.cpp  ComponentTree.cpp  ComponentTreeAdjustment.cpp  ComponentTreeAdjustmentByAnyNode.cpp  ComponentTreeAdjustmentByFlatzone.cpp  ComponentTreeAdjustmentByLeaf.cpp  ComponentTreeAdjustmentBySubtree.cpp  ComponentTreeGeneralAdjustment.cpp  NodeCT.cpp
morphoTreeAdjust/teste/: CMakeLists.txt  teste.cpp
notebooks/: morphoTreeAdjust_example_anyNode.ipynb  morphoTreeAdjust_example_leaf.ipynb  morphoTreeAdjust_example_leaf_interactive.ipynb  morphoTreeAdjust_example_removingAnyNode.ipynb  morphoTreeAdjust_example_subtree.ipynb
notebooks/.ipynb_checkpoints/: morphoTreeAdjust_example_anyNode-checkpoint.ipynb  morphoTreeAdjust_example_leaf-checkpoint.ipynb  morphoTreeAdjust_example_removingAnyNode-checkpoint.ipynb  morphoTreeAdjust_example_subtree-checkpoint.ipynb
notebooks/.virtual_documents/: Untitled.ipynb
python/morphoTreeAdjust/: __init__.py  utils.py
python/morphoTreeAdjust.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
results/jmiv2026/: break_even_only_1080p.json  break_even_only_480p.json  break_even_only_720p.json  jmiv2026_benchmark_icdar_1080p.conf  jmiv2026_benchmark_icdar_480p.conf  jmiv2026_benchmark_icdar_720p.conf  rev_jmiv2026_benchmark_icdar_480p.conf
tests/: CMakeLists.txt  TestComponentTree.cpp  Tests.hpp  break_even_runner.cpp  ctree_area_hist.cpp  dgmm2024.cpp  dgmm2025 copy.cpp  dgmm2025.cpp  gdmm2024.cpp  jmiv2025.cpp  jmiv2025_benchmark.cpp  jmiv2026.cpp  jmiv2026_benchmark.conf  jmiv2026_benchmark.cpp  teste.cpp  testeComponentTreeGeneralAdjustment.cpp  testePruningLeaf.cpp  testePruningSubtree.cpp  testeRemovingAnyNode.cpp  testeRemovingFlatzone.cpp
tests/build-asan/: CMakeCache.txt  Makefile  cmake_install.cmake  jmiv2025  testePruningLeaf
tests/dat/: lena_clipboard.txt
tests/python/: patch_find_break_even.py  patch_flatzones_json.py
unit-tests/: CMakeLists.txt  adjacency_relation_unit_tests.cpp  dual_min_max_tree_incremental_filter_leaf_unit_tests.cpp  dual_min_max_tree_incremental_filter_unit_tests.cpp  dynamic_component_tree_adjustment_leaf_unit_tests.cpp  dynamic_component_tree_adjustment_unit_tests.cpp  dynamic_component_tree_casf_unit_tests.cpp  dynamic_component_tree_unit_tests.cpp  public_core_api_unit_tests.cpp
