[build-system]
requires = [
  "scikit-build-core>=0.12",
  "pybind11>=2.12",
  "setuptools-scm>=8",
]
build-backend = "scikit_build_core.build"

[project]
name = "morphoTreeAdjust"
dynamic = ["version"]
description = "Core C++/Python implementation of MorphoTreeAdjust for dual min/max tree incremental filtering."
readme = "README.md"
authors = [{ name = "Wonder Alexandre Luz Alves", email = "worderalexandre@gmail.com" }]
license = { text = "GPL-3.0" }
keywords = ["machine learning", "morphological trees", "mathematical morphology"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Programming Language :: Python",
  "Programming Language :: C++",
]

[project.urls]
Homepage = "https://github.com/wonderalexandre/MorphoTreeAdjust"

[project.optional-dependencies]
viz = ["numpy", "matplotlib"]

[tool.scikit-build]
minimum-version = "0.12"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
cmake.version = "CMakeLists.txt"
ninja.version = ">=1.10"
wheel.packages = ["python/morphoTreeAdjust"]
install.components = ["python"]
sdist.exclude = [
  ".github/**",
  "anaconda_projects/**",
  "dev-tools/**",
  "docs/**",
  "examples/**",
  "notebooks/**",
  "results/**",
  "unit-tests/**",
]

[[tool.scikit-build.generate]]
path = "morphoTreeAdjust/version.py"
template = "__version__ = \"${version}\"\n"
location = "install"

[tool.setuptools_scm]
fallback_version = "0.0.dev0"

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-*"
skip = "pp* *-win32 *-manylinux_i686 *-musllinux_*"
test-command = "python -c \"import morphoTreeAdjust as mta; required=['AdjacencyRelation','DynamicComponentTree','DualMinMaxTreeIncrementalFilter','ComponentTreeCasf']; missing=[name for name in required if not hasattr(mta, name)]; assert not missing, missing\""
